@@ -1,10 +1,27 @@
 /////////////////////////SUMMARY///////////////////////////////
-- A - User
-- B - Service Provider
-- C - Caronte (Authentication Server)
-A -> C // ticket(A)
-B -> C // ticket(B)
 
+Login is done using only one API call
+- Client send email address to Caronte
+- Caronte constructs a Ticket-Granting-Ticket (TGT): a token with Caronte ID encrypted with user key
+- Client deconstructs the TGT, retrieves the token and constructs the Service-Granting-Ticket with User ID
+Caronte doesn't require the user to send back the SGT to validate the login proccess.
+Since the TGT sent by Caronte is of no use to anyone but the actual owner.
+Tokens generated by Caronte also contain a counter that can be used to identify non-used TGTs. 
+
+The SGT can now be used by the client to authenticate with the service provider
+- Client can use the SGT to authenticate and request access to a service provider
+- The service provider then sends Caronte its own SGT along with the Client's SGT for verification
+
+This means the service provider also needs to authenticate with Caronte.
+From Caronte's point of view there is no difference between a Client and a Service Provider.
+What Caronte sees are two Users wanting to establish a secure communication.
+This means Caronte has to validate the identity of both parties and safely provide a session key for symmetric encryption.
+
+* A - Client
+* B - Service Provider
+* C - Caronte (Authentication Server)
+A <-> C // ticket(A)
+B <-> C // ticket(B)
 A -> B // ticket(A)
 B -> C // ticket(B) + ticket(A)
 B <- C // cipher(key, pw_B) + cipher(key, pw_A)
@@ -12,7 +29,11 @@ B // decipher(key, pw_B) -> session key
 A <- B // cipher(key, pw_A)
 A // decipher(key, pw_A) -> session key
 session_key(A) == session_key(B) -> symmetric encryption
+
+
 ////////////////////////////////////////////////////////////////
+
+MORE DETAILED EXPLANATION
 
 Alice: client (consumer of data or resource)
 Bob: service provider (producer of data or resource)
